// Vitest Snapshot v1

exports[`<Header/> > should render authenticated header 1`] = `
<div>
  <div>
    <nav
      class="_wrap_1r937_132"
    >
      <div
        class="_right-nav_1r937_155"
      >
        <div>
          Ponti UI
        </div>
      </div>
      <div
        class="_left-nav_1r937_154"
      >
        <div>
          Account
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`<Header/> > should render unauthenticated header 1`] = `
<div>
  <div>
    <nav
      class="_wrap_1r937_132"
    >
      <div
        class="_right-nav_1r937_155"
      >
        <div>
          Ponti UI
        </div>
      </div>
      <div
        class="_left-nav_1r937_154"
      >
        <button
          class="_wrap_j0gpx_132 _text_j0gpx_158"
          data-testid="loginButton"
          type="button"
        >
          Get Started
        </button>
      </div>
    </nav>
  </div>
</div>
`;
